added feeding mechanism

--- a/me_term_project/05_feedback_mechanism.ipynb
+++ b/me_term_project/05_feedback_mechanism.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +103,7 @@
     "        self.new_data = []\n",
     "        self.new_labels = []\n",
     "        self.n_clusters = 7  # Initial cluster count\n",
+    "        self.initial_features = fc1  # From loaded data\n",
     "        self.load_initial_model()\n",
     "\n",
     "    def load_initial_model(self):\n",
@@ -149,13 +150,16 @@
     "        if not self.new_data:\n",
     "            print(\"No new data to retrain\")\n",
     "            return\n",
-    "\n",
+    "        combined_data = np.vstack([self.initial_features, self.new_data])\n",
+    "        # Retrain PCA on combined data (optional but recommended)\n",
+    "        self.pca = PCA(n_components=50, whiten=True, svd_solver='full')\n",
+    "        self.pca.fit(combined_data)\n",
     "        # Convert labels to integers\n",
     "        encoded_labels = le.transform(self.new_labels)\n",
     "        \n",
     "        # Apply PCA transform\n",
-    "        transformed = self.pca.transform(self.new_data)\n",
-    "        \n",
+    "        transformed = self.pca.transform(combined_data)    \n",
+    "\n",
     "        # Retrain with updated cluster count\n",
     "        self.model = KMeans(\n",
     "            n_clusters=self.n_clusters,\n",
@@ -176,19 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.applications.vgg16 import preprocess_input\n",
+    "from tensorflow.keras.applications.vgg16 import VGG16, preprocess_input\n",
+    "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.preprocessing import image\n",
     "\n",
+    "\n",
+    "# Initialize VGG16 feature extractor (add to FeedbackSystem __init__ or global scope)\n",
+    "def create_feature_extractor():\n",
+    "    base_model = VGG16(weights='imagenet', include_top=True)\n",
+    "    return Model(inputs=base_model.input, \n",
+    "                 outputs=base_model.get_layer('fc1').output)\n",
+    "\n",
+    "fc1_extractor = create_feature_extractor()\n",
+    "\n",
+    "# Revised feature extraction function\n",
     "def extract_features(img_path):\n",
-    "    \"\"\"Feature extractor for live images\"\"\"\n",
+    "    \"\"\"Proper fc1 feature extraction\"\"\"\n",
     "    img = image.load_img(img_path, target_size=(224, 224))\n",
     "    img_array = image.img_to_array(img)\n",
     "    img_array = preprocess_input(img_array)\n",
-    "    return img_array.flatten()  # Simplified for demo"
+    "    features = fc1_extractor.predict(np.expand_dims(img_array, axis=0))\n",
+    "    return features.flatten()  # Now returns 4096-dim vector"
    ]
   },
   {
@@ -200,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,15 +226,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 243ms/step\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Buffer dtype mismatch, expected 'const double' but got 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m img_path, is_new \u001b[38;5;129;01min\u001b[39;00m demo_images:\n\u001b[1;32m      9\u001b[0m     features \u001b[38;5;241m=\u001b[39m extract_features(img_path)\n\u001b[0;32m---> 10\u001b[0m     \u001b[43mfb_system\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_feedback\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeatures\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_new:\n\u001b[1;32m     13\u001b[0m         fb_system\u001b[38;5;241m.\u001b[39mretrain_model()\n",
+      "Cell \u001b[0;32mIn[19], line 33\u001b[0m, in \u001b[0;36mFeedbackSystem.process_feedback\u001b[0;34m(self, features)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Process user feedback for a single image\"\"\"\u001b[39;00m\n\u001b[1;32m     32\u001b[0m reduced \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpca\u001b[38;5;241m.\u001b[39mtransform([features])\n\u001b[0;32m---> 33\u001b[0m cluster \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduced\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     34\u001b[0m predicted_label \u001b[38;5;241m=\u001b[39m le\u001b[38;5;241m.\u001b[39minverse_transform([cluster])[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     36\u001b[0m is_correct \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPredicted: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpredicted_label\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Correct? (y/n): \u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "File \u001b[0;32m~/MECH536/.venv/lib/python3.12/site-packages/sklearn/cluster/_kmeans.py:1090\u001b[0m, in \u001b[0;36m_BaseKMeans.predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m   1087\u001b[0m \u001b[38;5;66;03m# sample weights are not used by predict but cython helpers expect an array\u001b[39;00m\n\u001b[1;32m   1088\u001b[0m sample_weight \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones(X\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mX\u001b[38;5;241m.\u001b[39mdtype)\n\u001b[0;32m-> 1090\u001b[0m labels \u001b[38;5;241m=\u001b[39m \u001b[43m_labels_inertia_threadpool_limit\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1091\u001b[0m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1092\u001b[0m \u001b[43m    \u001b[49m\u001b[43msample_weight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1093\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcluster_centers_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1094\u001b[0m \u001b[43m    \u001b[49m\u001b[43mn_threads\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_n_threads\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1095\u001b[0m \u001b[43m    \u001b[49m\u001b[43mreturn_inertia\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m   1096\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1098\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m labels\n",
+      "File \u001b[0;32m~/MECH536/.venv/lib/python3.12/site-packages/sklearn/utils/parallel.py:165\u001b[0m, in \u001b[0;36m_threadpool_controller_decorator.<locals>.decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    163\u001b[0m controller \u001b[38;5;241m=\u001b[39m _get_threadpool_controller()\n\u001b[1;32m    164\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m controller\u001b[38;5;241m.\u001b[39mlimit(limits\u001b[38;5;241m=\u001b[39mlimits, user_api\u001b[38;5;241m=\u001b[39muser_api):\n\u001b[0;32m--> 165\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/MECH536/.venv/lib/python3.12/site-packages/sklearn/cluster/_kmeans.py:806\u001b[0m, in \u001b[0;36m_labels_inertia\u001b[0;34m(X, sample_weight, centers, n_threads, return_inertia)\u001b[0m\n\u001b[1;32m    803\u001b[0m     _labels \u001b[38;5;241m=\u001b[39m lloyd_iter_chunked_dense\n\u001b[1;32m    804\u001b[0m     _inertia \u001b[38;5;241m=\u001b[39m _inertia_dense\n\u001b[0;32m--> 806\u001b[0m \u001b[43m_labels\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    807\u001b[0m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    808\u001b[0m \u001b[43m    \u001b[49m\u001b[43msample_weight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    809\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcenters\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    810\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcenters_new\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    811\u001b[0m \u001b[43m    \u001b[49m\u001b[43mweight_in_clusters\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    812\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlabels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlabels\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    813\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcenter_shift\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcenter_shift\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    814\u001b[0m \u001b[43m    \u001b[49m\u001b[43mn_threads\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_threads\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    815\u001b[0m \u001b[43m    \u001b[49m\u001b[43mupdate_centers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    816\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    818\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m return_inertia:\n\u001b[1;32m    819\u001b[0m     inertia \u001b[38;5;241m=\u001b[39m _inertia(X, sample_weight, centers, labels, n_threads)\n",
+      "File \u001b[0;32m_k_means_lloyd.pyx:26\u001b[0m, in \u001b[0;36msklearn.cluster._k_means_lloyd.lloyd_iter_chunked_dense\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Buffer dtype mismatch, expected 'const double' but got 'float'"
+     ]
+    }
+   ],
    "source": [
     "# Demo sequence\n",
     "demo_images = [\n",
-    "    (\"new_class_1.bmp\", True),\n",
-    "    (\"new_class_2.bmp\", True),\n",
-    "    (\"existing_class.bmp\", False)\n",
+    "    (\"dataset_demo_processed/Kt_1.bmp\", True),\n",
+    "    (\"dataset_demo_processed/Kt_2.bmp\", True),\n",
+    "    (\"data/images_preprocessed/images_histeq_resize/Cr_1.bmp\", False)\n",
     "]\n",
     "\n",
     "for img_path, is_new in demo_images:\n",
