created pickles for pca and kmeans

--- a/me_term_project/05_feedback_mechanismv2.ipynb
+++ b/me_term_project/05_feedback_mechanismv2.ipynb
@@ -32,8 +32,12 @@
     "    def extract_features(self, image_paths):\n",
     "        \"\"\"Extract VGG16 fc1 features from a batch of preprocessed images.\"\"\"\n",
     "        from tensorflow.keras.applications.vgg16 import VGG16\n",
+    "        import tensorflow.keras as keras\n",
+    "        vgg16_path = Path('..','models','VGG16.h5')\n",
+    "        vgg16 = keras.models.load_model(vgg16_path) # use saved model\n",
+    "\n",
     "        model = VGG16(weights='imagenet', include_top=True)\n",
-    "        feature_extractor = Model(inputs=model.input, \n",
+    "        feature_extractor = vgg16(inputs=model.input, \n",
     "                                  outputs=model.get_layer('fc1').output)\n",
     "        \n",
     "        features = []\n",
