--- a/me_term_project/01_preprocess.ipynb
+++ b/me_term_project/01_preprocess.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "# Module imports\n",
-    "We will use skimage to pre-process the images, pathlib to navigate files, and matplotlib for visualization."
+    "I will use skimage to pre-process the images, pathlib to navigate files, and matplotlib for visualization."
    ]
   },
   {
@@ -62,13 +62,13 @@
    "metadata": {},
    "source": [
     "# Pre-processing\n",
-    "We will take the following steps:\n",
+    "I will take the following steps:\n",
     "  * Load the image into python\n",
     "  * Apply histogram equalization\n",
     "  * Resize the image to 224 x 224 needed for use with VGG16\n",
     "  * Save the image to disk\n",
     "\n",
-    "We will start with the process for a single image as an example, and then process all of them in one batch."
+    "I will start with the process for a single image as an example, and then process all of them in one batch."
    ]
   },
   {
@@ -121,9 +121,7 @@
    "source": [
     "## Histogram equalization\n",
     "\n",
-    "Histogram equalization stretches the contrast of an image. We will see the effect this can have below.\n",
-    "\n",
-    "Don't worry too much about the code for plotting- I had to make this pretty for the official publication"
+    "Histogram equalization stretches the contrast of an image. We will see the effect this can have below."
    ]
   },
   {
@@ -212,9 +210,9 @@
    "metadata": {},
    "source": [
     "# Preprocessing all images\n",
-    "Along with histogram equalization, we need to resize the images, so they will fit with the VGG16 network. \n",
+    "Along with histogram equalization, I need to resize the images, so they will fit with the VGG16 network. \n",
     "\n",
-    "We define the process (load image, apply histogram equalization, resize image, save image) as a function, and then\n",
+    "I define the process (load image, apply histogram equalization, resize image, save image) as a function, and then\n",
     "\n",
     "apply the process to all of the images in the dataset."
    ]
