--- a/me_term_project/02_vgg-features.ipynb
+++ b/me_term_project/02_vgg-features.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Feature extraction\n",
     "\n",
-    "In this notebook we will use the VGG16 network pre-trained on ImageNet to compute meaningful numeric descriptions\n",
+    "For this project I will use the VGG16 network pre-trained on ImageNet to compute meaningful numeric descriptions\n",
     "\n",
     "of the contents of each image. We will use these later to classify the images with K-means."
    ]
@@ -17,7 +17,7 @@
    "source": [
     "## Module imports\n",
     "\n",
-    "We will use keras to access the VGG16 network. "
+    "I will use keras to access the VGG16 network. "
    ]
   },
   {
@@ -59,7 +59,7 @@
    "metadata": {},
    "source": [
     "## Loading files\n",
-    "First, we need to get the file paths of the pre-processed images we saved in 01_preprocess.ipynb. "
+    "First, I need to get the file paths of the pre-processed images I saved in 01_preprocess.ipynb. "
    ]
   },
   {
@@ -95,7 +95,7 @@
     "## Extracting the labels from filenames\n",
     "The labels are determined from the characteris in the filename before the first \"_\". \n",
     "\n",
-    "We could also just take the first two characters of the filename, but this does not generalize to cases where the labels have different numbers of characters."
+    "I could also just take the first two characters of the filename, but this does not generalize to cases where the labels have different numbers of characters."
    ]
   },
   {
@@ -122,12 +122,12 @@
    "metadata": {},
    "source": [
     "## Label encoding\n",
-    "One step that will make our lives easier throughout the analysis is standardizing the\n",
+    "One step that will make the life easier throughout the analysis is standardizing the\n",
     "encoding of labels. The labels are stored as strings in the filenames, but it will be more\n",
     "convenient to convert them to numeric values for more convenient calculations of statistics like accuracy, precision, recall, etc.\n",
-    "We can create one LabelEncoder model and save it for reuse throughout the project.\n",
+    "I can create one LabelEncoder model and save it for reuse throughout the project.\n",
     "\n",
-    "sklearn has a LabelEncoder object, but it doesn't let you sort the labels alphabetically. Therefore I use a simple label encoder which can do this."
+    "sklearn has a LabelEncoder object, but it doesn't let you sort the labels alphabetically. Therefore I have found a simple helper function that will do the job."
    ]
   },
   {
@@ -462,9 +462,9 @@
    "source": [
     "The pre-trained model will run data through the entire network and return the output of the classification layer. \n",
     "\n",
-    "Howevever, we only want the output of the intermediate layer so that we can use it as a feature descriptor. \n",
+    "Howevever, I only want the output of the intermediate layer so that I can use it as a feature descriptor. \n",
     "\n",
-    "By default, we will use the fc1 (first fully-connected layer), but we will use other layers as well in the sensitivity analysis."
+    "By default, I will use the fc1 (first fully-connected layer)."
    ]
   },
   {
