--- a/me_term_project/03_standard.ipynb
+++ b/me_term_project/03_standard.ipynb
@@ -6,11 +6,7 @@
    "source": [
     "# Standard Analysis\n",
     "\n",
-    "This is the baseline approach to classifying the images. \n",
-    "\n",
-    "The sensitivity analysis conducted in the other notebooks will change individual steps in this analysis.\n",
-    "\n",
-    "The techniques are described in the paper, so this notebook will focus more on implementation than explaning the approach."
+    "This is the baseline approach to classifying the images. "
    ]
   },
   {
@@ -19,7 +15,7 @@
    "source": [
     "## Module imports\n",
     "\n",
-    "We will use sklearn for the machine learning algorithms. Pandas provides a convenient way to organize\n",
+    "I will use sklearn for the machine learning algorithms. Pandas provides a convenient way to organize\n",
     "\n",
     "data and will help with plotting later. Matplotlib and seaborn are used to actually visualize the results."
    ]
@@ -59,7 +55,7 @@
    "metadata": {},
    "source": [
     "## Loading data\n",
-    "We already have the file paths, features, and labels from the last step, so we just need to retrieve it from disk"
+    "I already have the file paths, features, and labels from the last step, so I just need to retrieve it from disk"
    ]
   },
   {
@@ -100,24 +96,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have everything we need to do the analysis!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Dimension reduction\n",
     "### PCA\n",
-    "The first step in the analys is PCA, which will reduce the dimensionality of the data and hopefully filter out noise.\n",
+    "The first step is PCA, which will reduce the dimensionality of the data and hopefully filter out noise.\n",
     "\n",
     "The question is- how many dimensions to keep?\n",
     "\n",
-    "There is no right answer, but we want to keep components that contain signal (ie significant variance) and get rid of ones\n",
+    "There is no right answer, but I want to keep components that contain signal (ie significant variance) and get rid of ones\n",
     "\n",
-    "that are mostly noise. For high dimensional data, like our fc1 features, a rule of thumb is to select 50 components. Before blindly\n",
-    "\n",
-    "selecting 50, we will see how much variance each component preserves."
+    "that are mostly noise. For high dimensional data, like our fc1 features, a rule of thumb I found from the web is to select 50 components."
    ]
   },
   {
