--- a/me_term_project/01_preprocess.ipynb
+++ b/me_term_project/01_preprocess.ipynb
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x76db63f02ed0>"
+       "<matplotlib.image.AxesImage at 0x7025d4187710>"
       ]
      },
      "execution_count": 3,
